# MPC_for_AV_at_Intersection

./: .gitignore  README.md  pyproject.toml
examples/: prius.py
main/: visualise_mp.ipynb
main/bicycle/: main.py
main/config/: mpc_config_sensitivity.json
main/dashboard/: app.py  config.json
main/envs/: arterial_multi_lanes.py  free_area.py  intersection.py  intersection_multi_lanes.py  roundabout.py  roundabout_big.py  t_intersection.py  visualise_half_planes.py
main/lib/: a_star.py  car_dimensions.py  generate_MPs_multiple.py  generate_MPs_single.py  linalg.py  motion_primitive_search.py  motion_primitive_search_modified.py  motion_primitive_search_multi_lane.py  motion_primitive_search_roundabout.py  motion_primitive_search_single_lane.py  moving_obstacles.py  moving_obstacles_prediction.py  mpc.py  mpc_jerk.py  mpc_sensitivity.py  mpc_with_speed.py  obstacles.py  other_agents_prediction.py  plot_obstacles.py  plotting.py  scenario.py  trajectories.py
main/planner/: A_star_manual.md  A_star_naive.py  Planner_Sensitivity_Heuristic.py  Planner_Sensitivity_TrueCost.py  motion_primitive_search.py  motion_primitive_search_Sensitivity_Analysis.py  motion_primitive_search_full_intersection.py  motion_primitive_search_full_intersection_multi_lane.py  motion_primitive_search_plausibility.py  motion_primitive_search_roundabout.py
main/results/: scenario_1.m4v  scenario_2.m4v  (+3 more)
ro47005-project/: create_motion_primitives.py  create_motion_primitives2.py  create_motion_primitives_bicycle_model.py  create_motion_primitives_prius.py  visualise_mp.ipynb  visualise_mp.py
(+101 files in other folders)
